pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pack_relative_with_alias/src/foo/mod.ph
use mod as boo;

mod bar;
use bar.*;
use Nat.*;

let plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        .O => b,
        .S(a') => S(plus(a', b)),
    }
};
